# Auto-Message

./: .dokcerignore  Cargo.toml  Dokcerfile  README.md  app.py  cert.pem  config.py  docker-compose.yml  key.pem  requirements.txt  server.py
.github/workflows/: main_autometa.yml  main_ws-auto.yml
routes/: auth.py  whatsapp.py
src/: config.rs  db.rs  main.rs
src/models/: message.rs  user.rs
src/routes/: auth.rs  scheduler.rs  whatsapp.rs
src/utils/: jwt.rs
static/: styles.css
static/scripts/: dashboard.js  login.js  signup.js  waiting.js
templates/: index.html  login.html  signup.html  waiting.html
utils/: driver.py  logger.py  qr_code.py
