[package]
name = "automata-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
jsonwebtoken = "8"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.4", features = ["cors"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
